--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Stall eCommerce</h1>
-    <p>A brand new ecommerce in vanilla JS</p>
+    <p>A brand new light ecommerce in vanilla JS</p>
   </body>
 </html>
