--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,10 +3,75 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     <title>Stall eCommerce in Vanilla JS</title>
   </head>
   <body>
-    <h1>Stall eCommerce</h1>
-    <p>A brand new light ecommerce in vanilla JS</p>
+    <div class="grid-container">
+      <header>
+        <div class="brand">
+          <a href="./#/">Stall</a>
+          <span>js version</span>
+        </div>
+        <div>
+          <a href="/#/signin">Sign-in</a>
+          <a href="/#/cart">Cart</a>
+        </div>
+      </header>
+      <main>
+        <h1>Stall eCommerce</h1>
+        <p>A brand new light ecommerce in vanilla JS</p>
+        <div>
+          <ul class="products">
+            <li>
+              <div class="product">
+                <a href="/#/product/1">
+                  <img src="./images/product-1.jpg" alt="product"
+                /></a>
+                <div class="product-name">
+                <a href="/#/product/1">
+                  <a href="">Slim Shirt</a>
+                </div>
+                <div class="product-price">$46</div>
+              </div>
+            </li>
+            <li>
+              <div class="product">
+                <a href="/#/product/1">
+                  <img src="./images/product-1.jpg" alt="product" /></a>
+                <div class="product-name">
+                  <a href="/#/product/1">
+                    <a href="">Slim Shirt</a>
+                </div>
+                <div class="product-price">$46</div>
+              </div>
+            </li>
+            <li>
+              <div class="product">
+                <a href="/#/product/1">
+                  <img src="./images/product-1.jpg" alt="product" /></a>
+                <div class="product-name">
+                  <a href="/#/product/1">
+                    <a href="">Slim Shirt</a>
+                </div>
+                <div class="product-price">$46</div>
+              </div>
+            </li>
+            <li>
+              <div class="product">
+                <a href="/#/product/1">
+                  <img src="./images/product-1.jpg" alt="product" /></a>
+                <div class="product-name">
+                  <a href="/#/product/1">
+                    <a href="">Slim Shirt</a>
+                </div>
+                <div class="product-price">$46</div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </main>
+      <footer class="footer">All right reserver 2020</footer>
+    </div>
   </body>
 </html>
