set up routes and dynamic data

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <title>Stall eCommerce in Vanilla JS</title>
   </head>
   <body>
@@ -18,61 +18,10 @@
           <a href="/#/cart">Cart</a>
         </div>
       </header>
-      <main>
-        <h1>Stall eCommerce</h1>
-        <p>A brand new light ecommerce in vanilla JS</p>
-        <div>
-          <ul class="products">
-            <li>
-              <div class="product">
-                <a href="/#/product/1">
-                  <img src="./images/product-1.jpg" alt="product"
-                /></a>
-                <div class="product-name">
-                <a href="/#/product/1">
-                  <a href="">Slim Shirt</a>
-                </div>
-                <div class="product-price">$46</div>
+      <main id="main-container"></main>
 
-              </div>
-            </li>
-            <li>
-              <div class="product">
-                <a href="/#/product/1">
-                  <img src="./images/product-1.jpg" alt="product" /></a>
-                <div class="product-name">
-                  <a href="/#/product/1">
-                    <a href="">Slim Shirt</a>
-                </div>
-                <div class="product-price">$46</div>
-              </div>
-            </li>
-            <li>
-              <div class="product">
-                <a href="/#/product/1">
-                  <img src="./images/product-1.jpg" alt="product" /></a>
-                <div class="product-name">
-                  <a href="/#/product/1">
-                    <a href="">Slim Shirt</a>
-                </div>
-                <div class="product-price">$46</div>
-              </div>
-            </li>
-            <li>
-              <div class="product">
-                <a href="/#/product/1">
-                  <img src="./images/product-1.jpg" alt="product" /></a>
-                <div class="product-name">
-                  <a href="/#/product/1">
-                    <a href="">Slim Shirt</a>
-                </div>
-                <div class="product-price">$46</div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </main>
       <footer class="footer">All right reserver 2020</footer>
     </div>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
